@@ -128,7 +128,7 @@ on_pkgs_in_parallel {
 			doit("dpkg-gencontrol", "-p${package}", "-l$changelog", "-T$substvars",
 				"-P${dbgsym_tmp}",@{$dh{U_PARAMS}}, @dbgsym_options);
 
-			reset_perm_and_owner('0644', "${dbgsym_tmp}/DEBIAN/control");
+			reset_perm_and_owner(0644, "${dbgsym_tmp}/DEBIAN/control");
 		} elsif ($build_ids) {
 			# Only include the build-id if there is no dbgsym package (if
 			# there is a dbgsym package, the build-ids into the control
@@ -147,7 +147,7 @@ on_pkgs_in_parallel {
 
 		# This chmod is only necessary if the user sets the umask to
 		# something odd.
-		reset_perm_and_owner('0644', "${tmp}/DEBIAN/control");
+		reset_perm_and_owner(0644, "${tmp}/DEBIAN/control");
 	}
 };
 
