@@ -227,7 +227,7 @@ on_pkgs_in_parallel {
 				$link_to='changelog.html';
 				if (! defined $upstream_text) {
 					complex_doit("echo 'See changelog.html.gz' > $base/changelog");
-					reset_perm_and_owner('0644',"$base/changelog");
+					reset_perm_and_owner(0644,"$base/changelog");
 				}
 			}
 			if ($dh{K_FLAG}) {
