@@ -184,7 +184,7 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
 			rm_files("$tmp/DEBIAN/conffiles");
 		}
 		else {
-			reset_perm_and_owner('0644', "$tmp/DEBIAN/conffiles");
+			reset_perm_and_owner(0644, "$tmp/DEBIAN/conffiles");
 		}
 	}
 }
