@@ -241,7 +241,7 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
 	}
 
 	if (-e "$tmp/DEBIAN/shlibs") {
-		reset_perm_and_owner('0644', "$tmp/DEBIAN/shlibs");
+		reset_perm_and_owner(0644, "$tmp/DEBIAN/shlibs");
 	}
 
 	# dpkg-gensymbols files
