@@ -87,7 +87,7 @@ on_pkgs_in_parallel {
 			rm_files("$tmp/DEBIAN/md5sums");
 		}
 		else {
-			reset_perm_and_owner('0644', "$tmp/DEBIAN/md5sums");
+			reset_perm_and_owner(0644, "$tmp/DEBIAN/md5sums");
 		}
 		if ( -d $dbgsym_tmp) {
 			install_dir("${dbgsym_tmp}/DEBIAN");
@@ -100,7 +100,7 @@ on_pkgs_in_parallel {
 				rm_files("${dbgsym_tmp}/DEBIAN/md5sums");
 			}
 			else {
-				reset_perm_and_owner('0644', "${dbgsym_tmp}/DEBIAN/md5sums");
+				reset_perm_and_owner(0644, "${dbgsym_tmp}/DEBIAN/md5sums");
 			}
 		}
 	}
