@@ -9,6 +9,8 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
     where dh_installman would fail to remove the compressed manpage.
     With hardlinks involved, this could make dh_compress fail later.
     (Closes: #867846)
+  * Dh_lib.pm: Rewrite reset_perm_and_owner to it does chmod + chown
+    using perl built-ins rather than forking+exec.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
